clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__extended_test__parse_extended_test_arith_equal.snap
---
source: clash-brush-parser/src/parser/tests/extended_test.rs
assertion_line: 219
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ 5 -eq 5 ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              ExtendedTest(ExtendedTestExprCommand(
                expr: BinaryTest(ArithmeticEqualTo, Word(
                  value: "5",
                  loc: "[location]",
                ), Word(
                  value: "5",
                  loc: "[location]",
                )),
                loc: "[location]",
              ), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
