clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__extended_test__parse_extended_test_arith_not_equal.snap
---
source: clash-brush-parser/src/parser/tests/extended_test.rs
assertion_line: 230
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ 5 -ne 3 ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              ExtendedTest(ExtendedTestExprCommand(
                expr: BinaryTest(ArithmeticNotEqualTo, Word(
                  value: "5",
                  loc: "[location]",
                ), Word(
                  value: "3",
                  loc: "[location]",
                )),
                loc: "[location]",
              ), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
