clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__extended_test__parse_extended_test_less_than.snap
---
source: clash-brush-parser/src/parser/tests/extended_test.rs
assertion_line: 195
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ \"$a\" < \"$b\" ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              ExtendedTest(ExtendedTestExprCommand(
                expr: BinaryTest(LeftSortsBeforeRight, Word(
                  value: "\"$a\"",
                  loc: "[location]",
                ), Word(
                  value: "\"$b\"",
                  loc: "[location]",
                )),
                loc: "[location]",
              ), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
